--- a/OOPS/Day_92/task_1.html
+++ b/OOPS/Day_92/task_1.html
@@ -1,4 +1,16 @@
-// 🚕 JavaScript-Based Cab Service – Problem Statement
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <!-- <script src="task_1.js"></script> -->
+
+    <script>
+         // 🚕 JavaScript-Based Cab Service – Problem Statement
 class Cabservices {
     constructor() {
         this.car_type = "";
@@ -32,3 +44,7 @@ let obj = new Cabservices();
 obj.accept();
 obj.calculate();
 obj.display();
+
+    </script>
+</body>
+</html>
